This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
===========================================================================
10/1/17: Fixed report on frame saving when aligning whole TS in IMOD and
saving is imposed rather than selected (In 3.6).

9/17/17: Provided for different scaling of counting and linear mode images
from Falcon 3 with the power of 2 for scaling selectable by property.  Added
preliminary linearization of counting mode dose rates.

9/17/17: Added image-specific counts per electron value to mdoc file.

9/17/17: Applied dose rate linearization for counting mode to output of
ElectronStats script command and added a command RawElectronStats for
unlinearized values.

9/16/17: Stopped function for getting dose rate from image mean from getting
relative gain factor from the wrong buffer (In 3.6).

9/12/17: Added ability to align frames from Falcon cameras in SerialEM and
write command files for aligning with IMOD, just as with K2.

9/12/17: Added script commands for suppressing the check on frame alignment
parameter suitability before taking image, for testing program version and for
skipping a command based on program version.

9/12/17: Fixed RealignToNavItem command to not leave IS at 0 by mistake.

9/1/17: Added optional entries to the RealignToNavItem command to reset image
and realign until IS is below a threshold, and to leave IS at 0.

9/1/17: Added script menu option to clear persistent variables.

8/31/17: Added option to save frame align com files to same folder as frames.

8/31/17: Added checks for beam intensity calibrations with 0 intensities.

8/29/17: SEM_3-7-12
8/29/17: Fixed camera setup dialog opening at its last size (In 3.6).

8/29/17: Turned warning that image shift has not been calibrated for a montage
from message box to log window output (In 3.6).
