@@ -978,12 +978,15 @@
         </TR>
         <TR VALIGN="top">
           <TD>FEIcameraType</TD>
-          <TD>1 for an FEI Eagle camera or FEI STEM, 2 for a Falcon 1 or 2 camera, 3 for another 
+          <TD>1 for an FEI Eagle camera or FEI STEM, 2 for a Falcon 1 or 2 camera, 3 for 
+            Ceta 1 or 2 or another 
             camera with no shuttering capabilities, or 4 for Falcon 3.&nbsp; If the type is 
             2 and a camera is determined to have electron counting and aligning 
             capabilities, it will be converted to a 4. This entry implies RestrictedSizeType 
             1. It also implies a MinimumExposure of 0.011, unless a different value is 
-            entered, or unless the new FEI camera interface is available.</TD>
+            entered, or unless the new FEI camera interface is available.&nbsp; 12 and 14 
+            can be used to test various features for Falcon 2 or 3 with the new interface 
+            even when it is not present.</TD>
         </TR>
         <TR VALIGN="top">
           <TD>DEcameraType</TD>
@@ -1203,7 +1206,7 @@
         <TR VALIGN="top">
           <TD>RelativeGainFactors</TD>
           <TD>A list of relative camera gain values, one per binning listed on the Binnings 
-            line. This entry is needed for the Eagle camera, OneView camera, Tietz CMOS cameras, and for DE 
+            line. This entry is needed for the Eagle and some other FEI cameras, OneView camera, Tietz CMOS cameras, and for DE 
             cameras configured to bin by averaging instead of summation. The factor should be 1 for the 
             binning at which counts per electron is calibrated.</TD>
         </TR>
@@ -1403,6 +1406,11 @@
           <TD>Minimum exposure time that the camera will allow.</TD>
         </TR>
         <TR VALIGN="top">
+          <TD>AddToExposure</TD>
+          <TD>Amount to add to the specified exposure time, in seconds, to get the proper 
+            exposure from the camera.&nbsp; Falcon 3 initial versions needed 0.013.</TD>
+        </TR>
+        <TR VALIGN="top">
           <TD>PostBlankerDelay</TD>
           <TD>Delay in seconds between operating scripting beam blanker and taking an image.&nbsp; 
             This delay is applied in two situations: when beam is blanked before taking a 
@@ -1522,7 +1530,7 @@
         </TR>
         <TR VALIGN="top">
           <TD>DoseRateTable</TD>
-          <TD>Start of an alternative table for linearizing the counts in K2 electron 
+          <TD>Start of an alternative table for linearizing the counts in K2 or Falcon 3 electron 
             counting images so that dose rate reports are correct.&nbsp; Follow with the 
             number of lines to follow, and an optional scaling.&nbsp; Each following line 
             should have a raw mean number of counts per unbinned pixel per second, then the 
@@ -1532,7 +1540,31 @@
             applied to the raw electron counts from DM.&nbsp; The default tables in SerialEM 
             are based on the mean of images taken in DM and the dose rate readout in DM, 
             recorded for 200 and 300 KV.&nbsp; Values are included for dose rate readouts 
-            around 1, 2, 3, 4, 6, 9, 13, 18, 26, 39, 56, 73, and 80 for 300 KV.</TD>
+            around 1, 2, 3, 4, 6, 9, 13, 18, 26, 39, 56, 73, and 80 for 300 KV.&nbsp; There 
+            is now a built-in table for Falcon 3 that was obtained at 200 KV but is applied 
+            at 300 KV also.</TD>
+        </TR>
+        <TR VALIGN="top">
+          <TD>LinearToCountingRatio</TD>
+          <TD>Ratio of number of counts (in SerialEM) obtained from a Falcon 3 camera in 
+            linear mode to # of counts for the same exposure in counting mode.&nbsp; The 
+            counts for linear mode must be measured in SerialEM because it returns 
+            integrated rather than averaged counts.&nbsp; The default is 8.</TD>
+        </TR>
+        <TR VALIGN="top">
+          <TD><a name="scalepower">Falcon3ScalingPower</a></TD>
+          <TD>This entry does two things: it enables the scaling of data from the Falcon 3 
+            so that linear and counting modes give comparable counts for the same exposure; 
+            and it sets the number of divisions by 2 applied to the data.&nbsp; If the value 
+            is 0 or negative (but greater than -10), then counting mode data will be divided 
+            by 2 the given number of times and linear mode data will be scaled to match; 
+            i.e., no division of counting mode values for 0, or division by 2, 4, 8, etc for 
+            for -1, -2, -3, etc.&nbsp; If the value is positive, then linear mode counts 
+            will be divided by 2 the given number of times, i.e., by 2, 4, 8, etc. for 1, 2, 
+            3, etc., and counting mode data will be scaled to match.&nbsp; Enter -10 to 
+            disable the scaling of both kinds of data.&nbsp; The default is 4, which will 
+            divide linear mode counts by 16 and scale counting mode by ~0.4 to 0.5, 
+            depending on the entry for &#39;LinearToCountingRatio&#39;.</TD>
         </TR>
         <TR VALIGN="top">
           <TD>EndCameraProperties</TD>
